# documents-api

./: .gitignore  README.md  TODO.md  config.toml  docker-compose.yaml  docker-compose.yml  main.py  notes_handler.py  openapi.md  openapi.yaml  pyproject.toml  readme_if_you_want.md  req.in  requirements.txt
api/: api_logging.py  database.py  models.py  routes.py
app/: .env  Dockerfile  authentication.py  config.toml  crud.py  database.py  main.py  prestart.sh  requirements.txt  schemas.py  settings.py
app/app/: crud.py  pre_start.py
app/app/core/: config.py  security.py
app/backend/: database.py  main.py  models.py
app/backend/core/: authentication.py  base_service.py  config.py  database.py  (+1 more)
app/modules/: base_module.py
app/posts/: __init__.py  crud.py  domain.py  models.py  routes.py  schemas.py
app/template_blog/: crud.py  routes.py  schemas.py
app/tests/: test_main.py
app/users/: crud.py  domain.py  models.py  routes.py  schemas.py
apps/users/: model.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: models.py
backend/src/: core.py  functions.py  main.py  models.py  routes.py
backend/src/tests/: test_endpoint_files.py
backend/templates/: base.html
server/: prestart.sh
server/app/: main.py  models.py  utils.py
src/: database.py  main.py  models.py
src/core/: config.py  database.py  dependencies.py  errors.py
src/routers/: __init__.py  tools.py
template_fastapi/: main.py
tests/: test_database.py  test_main.py
web/: Dockerfile
web/app/: main.py  models.py
web/templates/: base.html  config_table.html
(+29 files in other folders)
