[project]
name = "csv-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.3",
    "httpx>=0.27.2",
    "jinja2-fragments>=1.6.0",
    "pydantic-settings>=2.6.0",
    "pytest>=8.3.3",
    "python-multipart>=0.0.12",
    "sqlmodel>=0.0.22",
    "uv>=0.4.27",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
prod = [
    "magnum>=19.0.0",
]
